# proj6_group3

./: .gitignore  README.md  instructions.md
analysis/: visualize_captures.py
bags/captures/: wp_01_20260313_141232.npy  wp_01_20260313_141232.yaml  wp_01_20260314_140634.npy  wp_01_20260314_140634.yaml  wp_01_20260314_140643.npy  wp_01_20260314_140643.yaml  wp_01_20260314_140726.npy  wp_01_20260314_140726.yaml  wp_02_20260313_141409.npy  wp_02_20260313_141409.yaml  wp_02_20260314_140921.npy  wp_02_20260314_140921.yaml  wp_03_20260313_141654.npy  wp_03_20260313_141654.yaml  wp_03_20260314_141031.npy  wp_03_20260314_141031.yaml  wp_04_20260313_142039.npy  wp_04_20260313_142039.yaml  wp_04_20260314_141225.npy  wp_04_20260314_141225.yaml  wp_05_20260313_142350.npy  wp_05_20260313_142350.yaml  wp_05_20260314_141413.npy  wp_05_20260314_141413.yaml  wp_06_20260313_142554.npy  wp_06_20260313_142554.yaml  wp_06_20260314_141618.npy  wp_06_20260314_141618.yaml  wp_07_20260313_142809.npy  wp_07_20260313_142809.yaml  wp_08_20260313_143028.npy  wp_08_20260313_143028.yaml
bags/mapping_run/: metadata.yaml
docs/: navigation_strategy.md
jasmitte_proj4/: LICENSE  package.xml  setup.cfg  setup.py
jasmitte_proj4/jasmitte_proj4/: localization_node.py
jasmitte_proj4/launch/: localization.launch.py
jasmitte_proj4/rviz/: proj4.rviz
scan_capture_pkg/: CMakeLists.txt  package.xml
scan_capture_pkg/config/: mapping.rviz
scan_capture_pkg/launch/: localization.launch.py
scan_capture_pkg/scan_capture_pkg/: scan_capture_node.py
